Update and rename Node.js初识 to 2020-01-13-Node.js初识.md

--- a/_posts/2020-01-13-Node.js初识.md
+++ b/_posts/2020-01-13-Node.js初识.md
@@ -1,3 +1,4 @@
+
 # Node.Js初识
 
 ### Node.Js是什么？
@@ -13,7 +14,7 @@ Node.js 是一个基于 Chrome V8 引擎的 JavaScript 运行时。这是摘自[
 
 所以可以想象一下，JavaScript 运行时其实就是 Chrome V8 引擎和libuv组合在一起，结合之后就变成了一个巨型磁铁，外面吸附着一堆Node API，以此来执行JavaScript应用程序；
 
-![Alt text](https://ibb.co/nRL8DMw)
+![Alt text](https://i.ibb.co/stVJF9g/node.png)
 
 
 
