Update and rename 2020-04-14_《图解HTTP》读书笔记-报文&状态码.md to 2020-04-14-《图解HTTP》读书笔记-报文&状态码.md

--- a/_posts/2020-04-14-《图解HTTP》读书笔记-报文&状态码.md
+++ b/_posts/2020-04-14-《图解HTTP》读书笔记-报文&状态码.md
@@ -1,3 +1,12 @@
+---
+layout:     post
+date:       2020-04-14
+author:     WWJ
+header-img: img/post-bg-universe.jpg
+catalog: Http
+tags: JS
+---
+
 #《图解HTTP》读书笔记-报文&状态码
 
 
